[package]
name = "llama_test"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features=["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
serde_json = "1.0.122"
tokenizers = "0.19.1"
